# ChangeLog for app-crypt/ccid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/ccid/ChangeLog,v 1.101 2014/02/14 22:41:38 flameeyes Exp $

*ccid-1.4.15 (14 Feb 2014)

  14 Feb 2014; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.15.ebuild:
  Version bump.

*ccid-1.4.14 (02 Dec 2013)

  02 Dec 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.14.ebuild,
  -ccid-1.4.11.ebuild, -ccid-1.4.13.ebuild:
  Version bump; remove old.

*ccid-1.4.13 (12 Oct 2013)

  12 Oct 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.13.ebuild,
  -ccid-1.4.10.ebuild, -ccid-1.4.9.ebuild:
  Version bump; remove old.

*ccid-1.4.11 (17 Jun 2013)

  17 Jun 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.11.ebuild,
  +files/92_pcscd_ccid.rules:
  Version bump; use the old udev rules as upstream is playing with us.

*ccid-1.4.10 (17 Apr 2013)

  17 Apr 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.10.ebuild:
  Version bump.

*ccid-1.4.9 (16 Jan 2013)

  16 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.9.ebuild:
  Version bump.

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ccid-1.4.8.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ccid-1.4.8.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ccid-1.4.8.ebuild:
  Add ~ia64, wrt bug #449220

  28 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> -ccid-1.4.2.ebuild,
  -ccid-1.4.5.ebuild:
  Cleanup old.

  14 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> ccid-1.4.8.ebuild:
  Enable verbose build, bug#443130 by Agostino Sarubbo

  11 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> ccid-1.4.2.ebuild,
  ccid-1.4.5.ebuild, ccid-1.4.8.ebuild:
  Use udev_newrules function to install udev rules into correct path.

  11 Dec 2012; Ian Stakenvicius <axs@gentoo.org> ccid-1.4.8.ebuild:
  virtualized references to sys-fs/udev
