@@ -4,22 +4,24 @@ Hash: SHA256
 AUX 92_pcscd_ccid.rules 2167 SHA256 324e933bff4ddf474abf32102d53e883e709ae5d93d7dcf11460909e27b80ece SHA512 87a35f50c03a11c51f08b7795cc7e0c58c00f630e9263ac793e13352a83ec2bd1a8c0e4d7e4593936ba7b458fc917f4e0ebfe5ee6755265369d3be03dfbac595 WHIRLPOOL 8a72a1df97d66f8bfb1e1c678ff47090df7e37c266f9465841ed684ff0fa08cffe0a0b1c8dfd51f5d31686683fd35b76a3dbb3c9ec06c254bb94740f526b0231
 DIST ccid-1.4.14.tar.bz2 484659 SHA256 c50b04ac8e800a14246ea42cf37f73bd42fdb3645afb290b7af091f9e15cd146 SHA512 72e9a026689a308a1eb96ab7e31a6af987782e8c66721e1fd0f4eb7b575363309303cdf138863c35e3feda789517122fd6f15cbd4b03bf3ed870a5e7fae9b5ea WHIRLPOOL ddb427f1efa1e5b512fb114b9cf57e92b81a449bc46f6788b8054754c09b7d30491713f76da08fd9272c3803b1f12dfa38269ef501bc7817bd6bd47d3a739115
 DIST ccid-1.4.15.tar.bz2 487625 SHA256 5436182246f15b3e78b1ad6707022b02dc400e3f50c4cb5e5d340a4e716d990a SHA512 393eb65db0fb31b58d4010c10cae6c7592078b02d0e77b7741330cc3b1e5dd768fa08dbaf75db39c547e3603fa70aa1c8aaf3b536266314f2f04d2ff2b6fb29c WHIRLPOOL 0dd511454cf8e39303318b61f9e2390f2ef27b763e80e9270f55ee15966ced8378f3f3ee5440b6380481f970f03ae37bbb2221da6c3d2d658622ea4cdc3aee3f
+DIST ccid-1.4.16.tar.bz2 490965 SHA256 0a0e6aa38863c79e38673c085254fa94fd0aa040b9622304a8d6d4222b7e7ea0 SHA512 b3b1761c591ba9981f646433bda4b300e6a1a2bf80b5416c47302cd430ec4f33deac8c0753d3e0568591d0ee6aea180695f2dc8f206585a85de506d1873eb915 WHIRLPOOL 083add5ca26fd1bea18d3547c482e9f0597f65d650ba942c23718ed2cebe216afc41c03ce22d9dadf1b3b9248b9fcc17ec7026a143fc9daa93b383e887603e9d
 DIST ccid-1.4.8.tar.bz2 470158 SHA256 7aca09fa4b9099e423402fd5df424adbafa502888710d1fda6015b6c1ff637ef SHA512 1b5b56521e2469c23e033141236aae0791d50640f810a012d8420002a56a6929e476a1c8462653909e8939f9439b043a64b247aced7d1f511f96a7dd0071ffa0 WHIRLPOOL d0c51bf360ee63a72646af98e44b4b1940336dcf3400f249b075d8efcabdf650cfbaa6be2656d411195411646c82ac410487b8b274e88457edc8c4e4a23ac15d
 EBUILD ccid-1.4.14.ebuild 1271 SHA256 bf3a6b57c8dd4fd4f3b07ce89cb6402e2f7b6d94dfc315818944a17441fdaa27 SHA512 29d224e22dce4f8c47fed3f488531d34ad7bfeeb722f3018b5465f0589dc115573295c82205c1d5fbb81561ee8f88fb8159a08ef4e73760c94ba1a3832ae7435 WHIRLPOOL 17b64ce14af88e123debc7400a377dda28c70de57f5a7aa06a12171760e46ec37c07d33483f166ab2e6202a8bd34ad96d00922effc413e7b6fa31ec19f2127cb
 EBUILD ccid-1.4.15.ebuild 1271 SHA256 57b1d73c6d129a78f7ae2220266d3a355e7ca7cd94e51b48bfb0d2ab37baa6a2 SHA512 ac7e3b3ca070ebfe642068a9922d73467cd7cefe79b35f988f273a43fe87203d37cf4a94295d67c1a295768191821fa8adc81b9a8e26cc52eb7974d6c544f69a WHIRLPOOL 30a6ccecd9cd99a2c7295d60dcb104a225950b6d1b08614c833485edd7ae5d808c5b60e8e4d73ac8f537fc09e075c64e68013715212dfb2ffa121c2660bfd3a3
+EBUILD ccid-1.4.16.ebuild 1272 SHA256 57d1a4a9ba2417f5a98af0f54af5e98c1fde99eb26012fb15036c91f9752d5a5 SHA512 04d87e3c030553a39098f34680bffb9bc161633a0e39e49b1e67f89f0f939cbc44a7e8011eb52955ca4e4cdd938400ba85209cf4b8fbae4c8907d88ad7d1845c WHIRLPOOL 463f0642b744f2341dab980a39775ee695f5a462cbc66cf4b500bf4a4d73e91c6fcc3fb52dd7293ef349fa4e491a9afa886f6ffaf98c7806d572e86ff84bc77d
 EBUILD ccid-1.4.8.ebuild 1167 SHA256 a7a9e9268056c47271628a920ec0b45d80a9763b69f93500e38b9122c1287365 SHA512 fcc61873fd6f79031bb50ea44ad02add4e7291022ee52bac855c2d988a1c771ad60a36ae38b6b82e6539985d0c57ffbfb3a400194b1670cd86ceca235d155bc6 WHIRLPOOL 0cf79d09d555156cbbd99540c0b6bfcf04eab1e55a5b03592fa83778c659d6047b909fec35025000af88fae249399b8b2ca8614d520068dd983be7b834cd3b10
-MISC ChangeLog 14214 SHA256 c9f0075558b2b45e778c345f3ba1881eec5282d855c6fdcf00c71b900fb25996 SHA512 fd4802ed812848c9deee08466fbd3a41b489e6ac484a0972e221114260318babcd283e8e5d9f97fca3580a5161eca97d350e3652b86a39feffef50c1e3364a15 WHIRLPOOL cd4f47b7fb63fb97c47c3ede600b90be14c722dc857c1704d0b522122be8fbe54bd5866dc9fcc58a3db5fdd411c34eec4be6cdd5c365dbe8359cc7f634811a2e
+MISC ChangeLog 14336 SHA256 6e7d14a38ba37cc601a5c94c6eb4b4375dfe915b256cc61ffd876a60ec13f33c SHA512 e909016f3613d50b847b7bcc928fafbc96d7ecf460106ed2de141143f41ecba8755b3ab13702e6dc5e5bab3024e52b8446c9ae2bdcfddc75409dade4f3d9295a WHIRLPOOL ddfac97c0c54d1a69be5178a3d063b884a5d4861b26ff0c6c31ecee71acda0e1f7fde232e21250335690049771a24a8d9148cebd95c61de8e5b1298a50a99373
 MISC metadata.xml 233 SHA256 4aee9335129898172e76dfedb640e3c5f1383f6cd619d8c7f5d9fc26acbf0e69 SHA512 b06d30613086872559ca7030d9e67b8bbd5274a72876ea539ca840f910bda12d78ea5e286ff8e98c5f943f6ef7e817fa5ec1b3d55ba364ab9250291951260869 WHIRLPOOL c640cc50e1b7b2aa52217f3e6b67965337a41b5ce461793c4f42c178faeedaa7bfd617637960f6f6e7d40e7b29386d68abef27d29d1df2421bbe850e87aa9c68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQF8BAEBCABmBQJS/pufXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQF8BAEBCABmBQJTLzxEXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MUE3MTczOTAwRTQzNTc0RDJBOUJBMDIx
-Q0QxM0M4QUQ0MzAxMzQyAAoJEBzRPIrUMBNCmjwH/0b/T1GldFq7zcTMn8LimoaS
-JnGr/pkgZZjYff6CwwLqr6zFVIUybP6kxjcLilUIUmmaqE+hG9LaZip58j5EM9e/
-ABhBT3//AZCi2F09WFmBq4oLOVtKSDdccGX8+tAKvNSLmZaWUzXo7A7+5BY6Ya80
-/kgb8Y/ki1j3bempMDMI/qeRfpoGILsgmZUt6t7F4aQ4vWQyIMpzebl+wqlFEEMR
-7Yx2MMqSTrtuNF21cEfWex/Accpjvhi8sHChINEOVMm22oSk6MYXtVYR6t+7Qpgv
-GAeIQm1m3Gr1gM8o05OLza4y9dzRb3M7aDgSem6fzTJWwdO9kk6zPtFc+VqF6XI=
-=SvU6
+Q0QxM0M4QUQ0MzAxMzQyAAoJEBzRPIrUMBNCjeoH/0Bj5wWc414vXbNgJQBwIqoX
+H+yY3y1nD1nA3grOqj2jXtixNH8efQx+yJP08p8glWUWLhLVrO8AwRC55bdrRF+9
+/GZV7LoZL5Y6X/uTlX/WHjNy/kvP1KSWa+Pc+WvEYTnHquxNQmqlLVj6sDxYYuFX
+tH6LY53RhF7Ma56n6G47qouOIysLMH471mSPeodhQQcMZyFlPbQo3cQ6U+mzXP9i
+OdovOt43jiaetjSqZh3ngWhQh9X+gDJmgFgbe4PAsSh9Ytwswkq7Tyl8MyjJtZTq
+HPo7Qv5vri4Rs5aVFFdUKbMNaruHGMAikKS1n52oNm8vUzTOYeF+stNk1Kwadvg=
+=haqC
 -----END PGP SIGNATURE-----
