@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/ccid
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/ccid/ChangeLog,v 1.101 2014/02/14 22:41:38 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/ccid/ChangeLog,v 1.102 2014/03/23 19:56:31 flameeyes Exp $
+
+*ccid-1.4.16 (23 Mar 2014)
+
+  23 Mar 2014; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.16.ebuild:
+  Version bump.
 
 *ccid-1.4.15 (14 Feb 2014)
 
